css/styles.css
html {
    scroll-behavior: smooth;
}

body {
    font-family: var(--font-sans);
    color: var(--text-main);
    background-color: var(--color-surface);
}

main {
    padding: 0 var(--spacing-4);
}

/**************************
 ***** Navbar Section *****
 **************************/
.navbar {
    display: flex;
    justify-content: space-between;
    padding: var(--spacing-4) var(--spacing-8);
}

.navbar__brand {
    display: flex;
    align-items: center;
    gap: var(--spacing-2);
}

.navbar__brand-logo {
    height: 35px;
    width: 35px;
    stroke: var(--text-main);
}

.navbar__brand-name {
    font-weight: bold;
    font-size: var(--font-2xl);
    letter-spacing: 1px;
}

.navbar__nav-links {
    display: flex;
    align-items: center;
    gap: var(--spacing-12);
}

@media (max-width: 768px) {
    .navbar__nav-links {
        gap: var(--spacing-6);
    }
}

.navbar__nav-actions {
    display: flex;
    align-items: center;
    gap: var(--spacing-4);
}

.navbar__nav-action > a {
    display: inline-block;
}

.navbar-action-icon {
    width: 25px;
    height: 25px;
    color: var(--color-primary);
    fill: var(--color-primary);
}

/************************
 ***** Hero Section *****
 ************************/
.hero {
    padding: var(--spacing-12) 0;
    display: grid;
    grid-template-columns: 5fr 6fr;
    column-gap: var(--spacing-9);
    align-items: center;
    justify-items: flex-end;
}

@media (max-width: 1024px) {
    .hero {
        grid-template-columns: 1fr;
        row-gap: var(--spacing-12);
        justify-items: center;
        text-align: center;
    }
}

.hero__img {
    position: relative;
}

.hero__pattern {
    position: absolute;
    width: 45%;
    height: 15%;
    background-color: #ddd;
    background-image: url("data:image/svg+xml,%3Csvg width='100' height='20' viewBox='0 0 100 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.184 20c.357-.13.72-.264 1.088-.402l1.768-.661C33.64 15.347 39.647 14 50 14c10.271 0 15.362 1.222 24.629 4.928.955.383 1.869.74 2.75 1.072h6.225c-2.51-.73-5.139-1.691-8.233-2.928C65.888 13.278 60.562 12 50 12c-10.626 0-16.855 1.397-26.66 5.063l-1.767.662c-2.475.923-4.66 1.674-6.724 2.275h6.335zm0-20C13.258 2.892 8.077 4 0 4V2c5.744 0 9.951-.574 14.85-2h6.334zM77.38 0C85.239 2.966 90.502 4 100 4V2c-6.842 0-11.386-.542-16.396-2h-6.225zM0 14c8.44 0 13.718-1.21 22.272-4.402l1.768-.661C33.64 5.347 39.647 4 50 4c10.271 0 15.362 1.222 24.629 4.928C84.112 12.722 89.438 14 100 14v-2c-10.271 0-15.362-1.222-24.629-4.928C65.888 3.278 60.562 2 50 2 39.374 2 33.145 3.397 23.34 7.063l-1.767.662C13.223 10.84 8.163 12 0 12v2z' fill='%239C92AC' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
    opacity: 0.7;
    border-radius: 15px;
    transform: skewX(-20deg);
}

[data-dark="true"] .hero__pattern {
    background-color: #aaa;
}

.hero__pattern-1 {
    top: -1rem;
    left: -2rem;
}

.hero__pattern-2 {
    bottom: -1rem;
    right: -2rem;
}

.hero__body h1 {
    font-size: var(--font-5xl);
    line-height: 1.35;
    font-weight: 600;
}

@media (max-width: 1024px) {
    .hero__body h1 {
        font-size: var(--font-3xl);
    }
}

.text-special {
    display: inline-block;
    padding: 0 var(--spacing-1);
    background-color: var(--color-primary);
    color: var(--color-surface);
}

.hero__paragraph {
    margin-top: var(--spacing-9);
    line-height: 1.5;
    font-size: var(--font-lg);
    color: var(--text-light);
}

.hero__btn-group {
    margin-top: var(--spacing-6);
    display: flex;
    gap: var(--spacing-6);
    flex-wrap: wrap;
}

@media (max-width: 1024px) {
    .hero__btn-group {
        justify-content: center;
    }
}

.hero__btn-group > a {
    display: inline-block;
    padding: var(--spacing-3) var(--spacing-9);
    font-size: var(--font-lg);
    border: 1px solid var(--color-primary);
    border-radius: var(--border-rounded-lg);
    transition: all 0.15s ease-out;
    z-index: 2;
}

.hero__btn-dark {
    color: var(--color-surface);
    background-color: var(--color-primary);
}

.hero__btn-light:hover {
    color: var(--color-surface);
    background-color: var(--text-main);
}

/****************************
 ***** Projects section *****
 ****************************/
.projects {
    padding: var(--spacing-16) 0;
}

.projects__header {
    text-align: center;
}

h2 {
    font-size: var(--font-5xl);
    font-weight: bold;
}

.projects__header > p {
    color: var(--text-light);
}

.chip-fieldset {
    margin-top: var(--spacing-6);
}

.chip-group {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: var(--spacing-3);
}

.chip-group__input {
    display: none;
}

.chip-group__label {
    letter-spacing: 0.5px;
    background-color: var(--color-secondary);
    padding: var(--spacing-2) var(--spacing-6);
    border-radius: var(--border-rounded-full);
    cursor: pointer;
    transition: all 0.15s ease-out;
}

.chip-group__label:hover {
    background-color: #ccc;
}

.chip-group__input:checked + .chip-group__label {
    background-color: var(--color-primary);
    color: var(--color-surface);
}

.chip-group__disabled {
    letter-spacing: 0.5px;
    background-color: var(--color-secondary);
    padding: var(--spacing-2) var(--spacing-6);
    border-radius: var(--border-rounded-full);
    user-select: none;
    transition: all 0.15s ease-out;
}

.project__card-list {
    margin-top: var(--spacing-12);
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: var(--spacing-24);
}

.project__card {
    max-width: 350px;
    display: flex;
    flex-direction: column;
}

.card__img {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    height: 350px;
    overflow: hidden;
}

.card__title {
    margin-top: var(--spacing-8);
    font-size: var(--font-xl);
    font-style: italic;
    font-weight: bold;
}

.card__title + .chip-group {
    margin-top: var(--spacing-3);
}
/* ... */

